--- a/frontend/src/tagFilter.css
+++ b/frontend/src/tagFilter.css
@@ -1,3 +1,8 @@
+.filter {
+  background-color: #fff;
+  border: none;
+}
+
 .filter-tag {
   margin: 5px;
   padding: 10px;
@@ -7,6 +12,7 @@
   min-width: 70px;
   color: #676767;
   font-size: 13x;
+  font-weight: bold;
 }
 
 .filter-tag:focus {
@@ -19,3 +25,12 @@
   border: none;
 }
 
+.button-collapse {
+  margin-left: 20px;
+  background-color: transparent;
+  border: none;
+}
+
+.button-collapse:focus {
+  outline: none;
+}
