resolve #8 - 컨텐츠 컴포넌트와 컨텐츠 목록 추가

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,3 +59,11 @@
 .dropdown-toggle:hover {
   border: 1px solid #fb7485 !important;
 }
+
+.content {
+  max-width: 300px;
+}
+
+.content.card img {
+  padding: 10px;
+}
