컨텐츠 목록 레이아웃 수정.
켄텐츠들이 flexbox 기반으로 가운데 표시되도록 수정함.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,6 +60,13 @@
   border: 1px solid #fb7485 !important;
 }
 
+.content-list.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 10px;
+}
+
 .content {
   max-width: 300px;
 }
