--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -74,3 +74,18 @@
 .content.card img {
   padding: 10px;
 }
+
+.top-scroll-button {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 50px;
+  height: 50px;
+  z-index: 1000;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.top-scroll-button:hover {
+  fill: red;
+}
