--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,7 @@
   border: none;
 }
 
-.filter-tag {
+.filter-category {
   margin: 5px;
   padding: 10px;
   border-radius: 20px;
@@ -24,11 +24,11 @@
   font-weight: bold;
 }
 
-.filter-tag:focus {
+.filter-category:focus {
   outline: none;
 }
 
-.filter-tag.on {
+.filter-category.on {
   background-color: #fb7485;
   color: #f4f5f7;
   border: none;
