카테고리 필터 레이아웃 수정
카테고리 수가 줄어 collaspe 기능 삭제 함.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,13 +3,7 @@
   border-radius: 20px;
   padding: 5px;
   margin: 5px 10px;
-}
-
-.panel-filter.card,
-.panel-filter.card-header,
-.panel-filter.accordion-collapse {
-  background: transparent;
-  border: none;
+  justify-content: center;
 }
 
 .filter-category {
