--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,7 @@
   padding: 5px;
   margin: 5px 10px;
   justify-content: center;
+  text-align: center;
 }
 
 .filter-category {
@@ -40,6 +41,9 @@
 
 .datepicker {
   border: 1px solid #000;
+  border-radius: 5px;
+  text-align: center;
+  height: 38px;
 }
 
 .datepicker:hover {
